--- a/.github/workflows/cd-release.yml
+++ b/.github/workflows/cd-release.yml
@@ -4,11 +4,11 @@ on:
   push:
     tags:
       - "v[0-9]+.[0-9]+.[0-9]+"
+      - "v[0-9]+.[0-9]+.[0-9]+-preview[0-9]+"
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     timeout-minutes: 15
 
     steps:
@@ -22,7 +22,7 @@ jobs:
 
       - name: Extract release notes
         run: |
-          git log --pretty=format:'%d %s' ${GITHUB_REF} | perl -pe 's| \(.*tag: v(\d+.\d+.\d+(-preview\d{3})?)(, .*?)*\)|\n## \1\n|g' > RELEASE-NOTES
+          git log --pretty=format:'%d %s' ${GITHUB_REF} | perl -pe 's| \(.*tag: v(\d+.\d+.\d+(-preview\d+)?)?(, .*?)*\)|\n## \1\n|g' > RELEASE-NOTES
 
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
@@ -30,7 +30,11 @@ jobs:
           dotnet-version: 8.0.x
 
       - name: Set VERSION variable from tag
-        run: echo "VERSION=${GITHUB_REF/refs\/tags\/v/}" >> $GITHUB_ENV
+        run: |
+          RAW_VERSION=${GITHUB_REF/refs\/tags\/v/}
+          # replace any accidental leading zeros in prerelease numbers
+          SANITIZED_VERSION=$(echo $RAW_VERSION | sed -E 's/\.0+([0-9]+)/.\1/g')
+          echo "VERSION=$SANITIZED_VERSION" >> $GITHUB_ENV
 
       - name: Build
         run: dotnet build --configuration Release /p:Version=${VERSION}
