--- a/.github/workflows/cd-release.yml
+++ b/.github/workflows/cd-release.yml
@@ -31,10 +31,10 @@ jobs:
 
       - name: Set VERSION variable from tag
         run: |
-          RAW_VERSION=${GITHUB_REF/refs\/tags\/v/}
-          # replace any accidental leading zeros in prerelease numbers
-          SANITIZED_VERSION=$(echo $RAW_VERSION | sed -E 's/\.0+([0-9]+)/.\1/g')
-          echo "VERSION=$SANITIZED_VERSION" >> $GITHUB_ENV
+            RAW_VERSION=${GITHUB_REF/refs\/tags\/v/}
+            # Strip leading zeros from numeric identifiers in pre-release section
+            SANITIZED_VERSION=$(echo $RAW_VERSION | perl -pe 's/\.0*([0-9]+)/.\1/g')
+            echo "VERSION=$SANITIZED_VERSION" >> $GITHUB_ENV
 
       - name: Build
         run: dotnet build --configuration Release /p:Version=${VERSION}
