--- a/.github/workflows/cd-release.yml
+++ b/.github/workflows/cd-release.yml
@@ -32,9 +32,19 @@ jobs:
       - name: Set VERSION variable from tag
         run: |
             RAW_VERSION=${GITHUB_REF/refs\/tags\/v/}
-            # Strip leading zeros from numeric identifiers in pre-release section
-            SANITIZED_VERSION=$(echo $RAW_VERSION | perl -pe 's/\.0*([0-9]+)/.\1/g')
-            echo "VERSION=$SANITIZED_VERSION" >> $GITHUB_ENV
+            # Split main part and prerelease (if any)
+            BASE=$(echo $RAW_VERSION | cut -d- -f1)
+            PRE=$(echo $RAW_VERSION | cut -s -d- -f2-)
+
+            if [ -n "$PRE" ]; then
+              # Replace .00xx with .xx (strip leading zeros)
+              PRE=$(echo $PRE | sed -E 's/\.0+([0-9]+)/.\1/g')
+              VERSION="$BASE-$PRE"
+            else
+              VERSION="$BASE"
+            fi
+
+            echo "VERSION=$VERSION" >> $GITHUB_ENV
 
       - name: Build
         run: dotnet build --configuration Release /p:Version=${VERSION}
