--- a/.github/workflows/cd-release.yml
+++ b/.github/workflows/cd-release.yml
@@ -4,7 +4,7 @@ on:
   push:
     tags:
       - "v[0-9]+.[0-9]+.[0-9]+"
-      - "v[0-9]+.[0-9]+.[0-9]+-preview[0-9]+"
+      - "v[0-9]+.[0-9]+.[0-9]+-preview*"
 
 jobs:
   build:
@@ -22,7 +22,7 @@ jobs:
 
       - name: Extract release notes
         run: |
-          git log --pretty=format:'%d %s' ${GITHUB_REF} | perl -pe 's| \(.*tag: v(\d+.\d+.\d+(-preview\d+)?)?(, .*?)*\)|\n## \1\n|g' > RELEASE-NOTES
+          git log --pretty=format:'%d %s' ${GITHUB_REF} | perl -pe 's| \(.*tag: v(\d+.\d+.\d+(-preview[0-9A-Za-z\.\-]+)?)?(, .*?)*\)|\n## \1\n|g' > RELEASE-NOTES
 
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
@@ -31,20 +31,29 @@ jobs:
 
       - name: Set VERSION variable from tag
         run: |
-            RAW_VERSION=${GITHUB_REF/refs\/tags\/v/}
-            # Split main part and prerelease (if any)
-            BASE=$(echo $RAW_VERSION | cut -d- -f1)
-            PRE=$(echo $RAW_VERSION | cut -s -d- -f2-)
+          RAW_VERSION=${GITHUB_REF/refs\/tags\/v/}
 
-            if [ -n "$PRE" ]; then
-              # Replace .00xx with .xx (strip leading zeros)
-              PRE=$(echo $PRE | sed -E 's/\.0+([0-9]+)/.\1/g')
-              VERSION="$BASE-$PRE"
-            else
-              VERSION="$BASE"
-            fi
+          BASE=$(echo $RAW_VERSION | cut -d- -f1)
+          PRE=$(echo $RAW_VERSION | cut -s -d- -f2-)
 
-            echo "VERSION=$VERSION" >> $GITHUB_ENV
+          if [ -n "$PRE" ]; then
+            # Split prerelease into parts by dot and strip leading zeros from numbers
+            CLEAN_PRE=$(echo $PRE | awk -F. '{
+              out=$1;
+              for (i=2;i<=NF;i++) {
+                if ($i ~ /^[0-9]+$/) sub(/^0+/, "", $i);
+                if ($i == "") $i="0";
+                out=out"."$i
+              }
+              print out
+            }')
+            VERSION="$BASE-$CLEAN_PRE"
+          else
+            VERSION="$BASE"
+          fi
+
+          echo "Using VERSION=$VERSION"
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
 
       - name: Build
         run: dotnet build --configuration Release /p:Version=${VERSION}
