--- a/.github/workflows/cd-release-preview.yml
+++ b/.github/workflows/cd-release-preview.yml
@@ -3,12 +3,11 @@ name: "2. Continuous Deployment (Release Preview)"
 on:
   push:
     tags:
-      - "v[0-9]+\\.[0-9]+\\.[0-9]+-preview[0-9]+\\.[0-9]+"
+      - "v[0-9]+\\.[0-9]+\\.[0-9]+-preview.*"
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     timeout-minutes: 15
 
     steps:
