--- a/CryptoNet/CryptoNet.csproj
+++ b/CryptoNet/CryptoNet.csproj
@@ -59,8 +59,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CryptoNet.ExtShared\CryptoNet.ExtShared.csproj" />
-    <ProjectReference Include="..\CryptoNet.Models\CryptoNet.Models.csproj" />
+    <ProjectReference Include="..\CryptoNet.ExtShared\CryptoNet.ExtShared.csproj" PrivateAssets="all" />
+    <ProjectReference Include="..\CryptoNet.Models\CryptoNet.Models.csproj" PrivateAssets="all" />
   </ItemGroup>
 
 </Project>
