--- a/CryptoNet.ConsumerTest/CryptoNet.ConsumerTest.csproj
+++ b/CryptoNet.ConsumerTest/CryptoNet.ConsumerTest.csproj
@@ -5,14 +5,10 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Text.Json" Version="9.0.8" />
+    <PackageReference Include="CryptoNet" Version="3.0.25-preview.20250822.1051" />
   </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\..\CryptoNet\CryptoNet.csproj" />
-  </ItemGroup>
 </Project>
