--- a/CryptoNet.ConsumerTest/CryptoNet.ConsumerTest.csproj
+++ b/CryptoNet.ConsumerTest/CryptoNet.ConsumerTest.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CryptoNet" Version="3.0.25-preview.20250822.1051" />
+    <PackageReference Include="CryptoNet" Version="3.1.0" />
   </ItemGroup>
 
 </Project>
