--- a/.github/workflows/code-coverage.yml
+++ b/.github/workflows/code-coverage.yml
@@ -1,9 +1,9 @@
 name: "3. Code Coverage"
 
 permissions:
-  contents: write          # commit & push
-  pull-requests: write     # open/update PRs
-  issues: write            # create/apply labels (fixes your error)
+  contents: write # commit & push
+  pull-requests: write # open/update PRs
+  issues: write # create/apply labels (fixes your error)
 
 on:
   push:
@@ -12,7 +12,7 @@ on:
       - "feature/*"
     paths-ignore:
       - "**/README.md"
-      - "coverage-badge.svg"    # prevent loops when the badge PR merges
+      - "coverage-badge.svg" # prevent loops when the badge PR merges
   pull_request:
     branches:
       - "main"
@@ -28,7 +28,7 @@ jobs:
         with:
           ref: ${{ github.ref }}
           fetch-depth: 0
-          persist-credentials: false   # PR action will handle auth
+          persist-credentials: false # PR action will handle auth
 
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
@@ -66,9 +66,9 @@ jobs:
         id: cpr
         uses: peter-evans/create-pull-request@v6
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}     # uses repo’s workflow token
-          branch: ci/update-coverage-badge       # PR head branch
-          base: main                             # PR base branch
+          token: ${{ secrets.GITHUB_TOKEN }} # uses repoï¿½s workflow token
+          branch: ci/update-coverage-badge # PR head branch
+          base: main # PR base branch
           title: "Update coverage badge"
           commit-message: "Update coverage badge"
           body: "Automated update of coverage-badge.svg"
