#154 Update packaging and build process for CryptoNet
- Set `<IsPackable>false</IsPackable>` in `CryptoNet.ExtShared.csproj`
  and `CryptoNet.Models.csproj` to prevent NuGet packaging.
- Bump version in `CryptoNet.csproj` from `3.0.0` to `3.1.9`.
- Add `<IncludeReferencedProjects>true</IncludeReferencedProjects>`
  to include referenced project outputs in the NuGet package.
- Add a target to explicitly include referenced DLLs in the package.
- Modify asset handling for `CryptoNetLogo-icon.png` to prevent
  copying to the output directory.
- Update `Directory.Build.Props` to conditionally set `<PathMap>`
  only when `$(SolutionDir)` is defined, avoiding malformed paths.

--- a/Directory.Build.Props
+++ b/Directory.Build.Props
@@ -10,7 +10,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <Deterministic>true</Deterministic>
-    <PathMap>$(SolutionDir)={CryptoNet}/</PathMap>
+
+    <!-- Only set PathMap when SolutionDir is defined to avoid malformed /pathmap -->
+    <PathMap Condition=" '$(SolutionDir)' != '' ">$(SolutionDir)={CryptoNet}/</PathMap>
+
     <!-- Some of us are already working with the next SDK -->
     <SuppressNETCoreSdkPreviewMessage>true</SuppressNETCoreSdkPreviewMessage>
   </PropertyGroup>
