--- a/CryptoNet.ExtShared/CryptoNet.ExtShared.csproj
+++ b/CryptoNet.ExtShared/CryptoNet.ExtShared.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <LangVersion>10.0</LangVersion>
     <Nullable>enable</Nullable>
+    <IsPackable>false</IsPackable>
     <_SkipUpgradeNetAnalyzersNuGetWarning>true</_SkipUpgradeNetAnalyzersNuGetWarning>
   </PropertyGroup>
 
