--- a/CryptoNet/CryptoNet.csproj
+++ b/CryptoNet/CryptoNet.csproj
@@ -15,7 +15,7 @@
     <Company>itbackyard</Company>
     <Authors>Maytham Fahmi</Authors>
     <MinClientVersion>1.0.0</MinClientVersion>
-    <Version>3.0.0</Version>
+    <Version>3.1.9</Version>
     <Title>CryptoNet</Title>
     <Product>CryptoNet</Product>
     <RootNamespace>CryptoNet</RootNamespace>
@@ -33,6 +33,9 @@
     <_SkipUpgradeNetAnalyzersNuGetWarning>true</_SkipUpgradeNetAnalyzersNuGetWarning>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
+
+    <!-- Ensure referenced project outputs are included in the resulting nupkg -->
+    <IncludeReferencedProjects>true</IncludeReferencedProjects>
   </PropertyGroup>
 
   <Target Name="PrepareReleaseNotes" BeforeTargets="GenerateNuspec">
@@ -53,7 +56,7 @@
   <ItemGroup>
     <None Include="..\LICENSE" Pack="true" PackagePath="\" />
     <None Include="..\README.md" Pack="true" PackagePath="\" />
-    <None Include="..\img\CryptoNetLogo-icon.png" Pack="true" PackagePath="\">
+    <None Include="..\img\CryptoNetLogo-icon.png" Pack="true" PackagePath="\" >
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
   </ItemGroup>
@@ -62,5 +65,18 @@
     <ProjectReference Include="..\CryptoNet.ExtShared\CryptoNet.ExtShared.csproj" PrivateAssets="all" />
     <ProjectReference Include="..\CryptoNet.Models\CryptoNet.Models.csproj" PrivateAssets="all" />
   </ItemGroup>
+
+  <Target Name="IncludeReferencedDllsInPackage" AfterTargets="Build">
+    <ItemGroup>
+      <None Include="$(OutputPath)CryptoNet.ExtShared.dll">
+        <Pack>true</Pack>
+        <PackagePath>lib\netstandard2.0\</PackagePath>
+      </None>
+      <None Include="$(OutputPath)CryptoNet.Models.dll">
+        <Pack>true</Pack>
+        <PackagePath>lib\netstandard2.0\</PackagePath>
+      </None>
+    </ItemGroup>
+  </Target>
 
 </Project>
