#154 Improve packaging, debugging, and validation processes
- Set `<IsPackable>false</IsPackable>` in `CryptoNet.ExtShared.csproj`
  and `CryptoNet.Models.csproj` to prevent standalone NuGet packing.
- Added `<DebugType>portable</DebugType>` and `<Deterministic>true</Deterministic>`
  for portable PDBs and deterministic builds.
- Downgraded `Microsoft.CodeAnalysis.NetAnalyzers` to 9.0.0 and
  `System.Text.Json` to 9.0.8 in `CryptoNet.ExtShared.csproj` for compatibility.
- Included `.pdb` and `.xml` files for `CryptoNet.ExtShared` and
  `CryptoNet.Models` in the NuGet package if they exist.
- Added NuGet validation script in `run_nuget_validation.ps1` to
  ensure package quality using `dotnet-validate`.

--- a/CryptoNet.Models/CryptoNet.Models.csproj
+++ b/CryptoNet.Models/CryptoNet.Models.csproj
@@ -4,7 +4,12 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <LangVersion>10.0</LangVersion>
     <Nullable>enable</Nullable>
+    <!-- Prevent this project from being packed as its own NuGet package. -->
     <IsPackable>false</IsPackable>
+
+    <!-- Produce portable PDBs and deterministic outputs for symbol/SourceLink validation -->
+    <DebugType>portable</DebugType>
+    <Deterministic>true</Deterministic>
   </PropertyGroup>
 
   <ItemGroup>
