--- a/CryptoNet.ExtShared/CryptoNet.ExtShared.csproj
+++ b/CryptoNet.ExtShared/CryptoNet.ExtShared.csproj
@@ -4,14 +4,21 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <LangVersion>10.0</LangVersion>
     <Nullable>enable</Nullable>
+    <!-- Prevent this project from being packed as its own NuGet package.
+         That ensures its compiled DLL will be embedded into CryptoNet when
+         packing the top-level project. -->
     <IsPackable>false</IsPackable>
     <_SkipUpgradeNetAnalyzersNuGetWarning>true</_SkipUpgradeNetAnalyzersNuGetWarning>
+
+    <!-- Produce portable PDBs and deterministic outputs for symbol/SourceLink validation -->
+    <DebugType>portable</DebugType>
+    <Deterministic>true</Deterministic>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="10.0.100" PrivateAssets="All" />
-    <PackageReference Include="System.Text.Json" Version="10.0.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="9.0.0" PrivateAssets="All" />
+    <PackageReference Include="System.Text.Json" Version="9.0.8" />
   </ItemGroup>
 
   <ItemGroup>
