#154 Enhance build settings and NuGet packaging metadata
Updated project files to improve NuGet packaging and SourceLink integration:
- Added `<IsPackable>false</IsPackable>` to prevent standalone NuGet packaging.
- Included repository metadata (`<RepositoryUrl>` and `<PublishRepositoryUrl>`).
- Enabled SourceLink and deterministic build settings with `<EmbedUntrackedSources>` and `<ContinuousIntegrationBuild>`.

Refined dependencies:
- Added `Microsoft.SourceLink.GitHub` (v8.0.0) for GitHub SourceLink support.
- Retained `Microsoft.CodeAnalysis.NetAnalyzers` (v9.0.0) for static analysis.

Removed obsolete properties and comments:
- Removed `_SkipUpgradeNetAnalyzersNuGetWarning` and outdated comments.

Updated `run_nuget_validation.ps1`:
- Added `dotnet clean`, `dotnet build`, and `dotnet pack` commands.
- Integrated `dotnet-validate` for NuGet package validation.

--- a/CryptoNet.ExtShared/CryptoNet.ExtShared.csproj
+++ b/CryptoNet.ExtShared/CryptoNet.ExtShared.csproj
@@ -4,15 +4,18 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <LangVersion>10.0</LangVersion>
     <Nullable>enable</Nullable>
-    <!-- Prevent this project from being packed as its own NuGet package.
-         That ensures its compiled DLL will be embedded into CryptoNet when
-         packing the top-level project. -->
-    <IsPackable>false</IsPackable>
-    <_SkipUpgradeNetAnalyzersNuGetWarning>true</_SkipUpgradeNetAnalyzersNuGetWarning>
 
-    <!-- Produce portable PDBs and deterministic outputs for symbol/SourceLink validation -->
+    <IsPackable>false</IsPackable>
+    <RepositoryUrl>https://github.com/itbackyard/CryptoNet</RepositoryUrl>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+
+    <!-- SourceLink + deterministic build settings -->
     <DebugType>portable</DebugType>
     <Deterministic>true</Deterministic>
+    <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
+
+    <!-- Embed generated (untracked) sources so SourceLink validation passes -->
+    <EmbedUntrackedSources>true</EmbedUntrackedSources>
   </PropertyGroup>
 
   <ItemGroup>
