Refactor preview tag format and add release script
Updated `cd-release-preview.yml` to simplify the regex for preview tag matching. Adjusted `run_release.ps1` to make `PreviewId` and `TagName` NuGet-compliant by removing dots and using the format `vX.Y.Z-previewYYYYMMDDHHmm`. Improved error messaging for version validation. Added `run_release.ps1` to the `DevOps` project in `CryptoNet.sln`.

--- a/.github/workflows/cd-release-preview.yml
+++ b/.github/workflows/cd-release-preview.yml
@@ -3,7 +3,7 @@ name: "2. Continuous Deployment (Release Preview)"
 on:
   push:
     tags:
-      - "v[0-9]+\\.[0-9]+\\.[0-9]+-preview.*"
+      - "v[0-9]+\\.[0-9]+\\.[0-9]+-preview*"
 
 jobs:
   build:
