Feature/hotfix fixing release and package issues (#157)
* #154 Update packaging and build process for CryptoNet

- Set `<IsPackable>false</IsPackable>` in `CryptoNet.ExtShared.csproj`
  and `CryptoNet.Models.csproj` to prevent NuGet packaging.
- Bump version in `CryptoNet.csproj` from `3.0.0` to `3.1.9`.
- Add `<IncludeReferencedProjects>true</IncludeReferencedProjects>`
  to include referenced project outputs in the NuGet package.
- Add a target to explicitly include referenced DLLs in the package.
- Modify asset handling for `CryptoNetLogo-icon.png` to prevent
  copying to the output directory.
- Update `Directory.Build.Props` to conditionally set `<PathMap>`
  only when `$(SolutionDir)` is defined, avoiding malformed paths.

* #154 Update dependencies and project configurations

- Upgraded `Microsoft.CodeAnalysis.NetAnalyzers` to `10.0.100`.
- Upgraded `System.Text.Json` to `10.0.0` across all projects.
- Updated test dependencies: `Microsoft.NET.Test.Sdk`, `NUnit3TestAdapter`,
  `ReportGenerator`, `SharperHacks.CoreLibs.IO`, `CliWrap`, and `NUnit.Analyzers`.
- Added `Microsoft.Build` to `CryptoNet.UnitTests.csproj`.
- Enabled embedded debugging with `<DebugType>embedded</DebugType>`.
- Re-enabled `<GenerateDocumentationFile>` in `CryptoNet.csproj`.
- Centralized versioning in `Directory.Build.Props` and set version to `3.2.0`.
- Updated `TargetFramework` to `net8.0` in `Directory.Build.Props`.
- Adjusted project references and metadata for consistency.

* #154 Improve packaging, debugging, and validation processes

- Set `<IsPackable>false</IsPackable>` in `CryptoNet.ExtShared.csproj`
  and `CryptoNet.Models.csproj` to prevent standalone NuGet packing.
- Added `<DebugType>portable</DebugType>` and `<Deterministic>true</Deterministic>`
  for portable PDBs and deterministic builds.
- Downgraded `Microsoft.CodeAnalysis.NetAnalyzers` to 9.0.0 and
  `System.Text.Json` to 9.0.8 in `CryptoNet.ExtShared.csproj` for compatibility.
- Included `.pdb` and `.xml` files for `

--- a/CryptoNet/CryptoNet.csproj
+++ b/CryptoNet/CryptoNet.csproj
@@ -26,7 +26,9 @@
     <Copyright>Copyright © 2020</Copyright>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
+    <IncludeSymbols>true</IncludeSymbols>
     <DebugType>embedded</DebugType>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
     <_SkipUpgradeNetAnalyzersNuGetWarning>true</_SkipUpgradeNetAnalyzersNuGetWarning>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
@@ -62,7 +64,7 @@
     <ProjectReference Include="..\CryptoNet.Models\CryptoNet.Models.csproj" PrivateAssets="all" />
   </ItemGroup>
 
-  <Target Name="IncludeReferencedDllsInPackage" BeforeTargets="GenerateNuspec">
+  <Target Name="IncludeReferencedDllsInPackage" AfterTargets="Build">
     <ItemGroup>
       <None Include="$(OutputPath)CryptoNet.ExtShared.dll">
         <Pack>true</Pack>
