Update build pipeline and embed debug info
Removed `--no-build` from `dotnet pack` in `cd-release.yml` to ensure the project is built before packaging. Removed the `dotnet nuget push` step from the release pipeline. Added `<DebugType>embedded</DebugType>` to `Directory.Build.Props` to embed debugging information in assemblies.

--- a/Directory.Build.Props
+++ b/Directory.Build.Props
@@ -23,6 +23,7 @@
     <!-- Generate symbol packages for NuGet -->
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    <DebugType>embedded</DebugType>
   </PropertyGroup>
 
 </Project>
