--- a/.github/workflows/cd-release.yml
+++ b/.github/workflows/cd-release.yml
@@ -39,7 +39,7 @@ jobs:
         run: dotnet test --configuration Release /p:Version=${VERSION} --no-build
 
       - name: Pack
-        run: dotnet pack --configuration Release /p:Version=${VERSION} --no-build --output .
+        run: dotnet pack --configuration Release /p:Version=${VERSION} --output .
 
       - name: Push
         run: dotnet nuget push CryptoNet.${VERSION}.nupkg --source https://api.nuget.org/v3/index.json --api-key ${NUGET_TOKEN}
