--- a/.github/workflows/cd-release.yml
+++ b/.github/workflows/cd-release.yml
@@ -14,8 +14,8 @@ jobs:
         with:
           fetch-depth: 0
 
-      # - name: Verify commit exists in origin/main
-      #   run: git branch --remote --contains | grep origin/main
+      - name: Verify commit exists in origin/main
+        run: git branch --remote --contains | grep origin/main
 
       - name: Extract release notes
         run: |
