feat: Add CryptoNet.Examples project with various encryption examples
- Introduced `Program.cs` to demonstrate DSA and AES examples.
- Added test files for AES and RSA examples including `.docx`, `.pdf`, `.png`, and `.xlsx`.
- Updated `CryptoNet.ExtPack` project to improve MD5 calculation and string comparison.
- Modified solution file to include the new `CryptoNet.Examples` project.
- Removed outdated contributing guidelines from `README.md`.
- Deleted `RELEASE-NOTES` file as it was no longer needed.
- Created various PowerShell scripts for build, code coverage, Docker setup, documentation generation, and NuGet validation.
- Added migration guide for transitioning from CryptoNet v2.4.0 to v3.4.3, detailing breaking changes and updates.
- Updated table of contents in documentation to include migration and examples sections.

--- a/CryptoNet.ExtPack/CryptoNet.ExtPack.csproj
+++ b/CryptoNet.ExtPack/CryptoNet.ExtPack.csproj
@@ -33,7 +33,7 @@
     <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
     <_SkipUpgradeNetAnalyzersNuGetWarning>true</_SkipUpgradeNetAnalyzersNuGetWarning>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <GenerateDocumentationFile>True</GenerateDocumentationFile>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
